# Hotel-Horizon-Hub

./: db.sqlite3  pyproject.toml
bookings/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
bookings/migrations/: 0002_pricing_report_room_and_more.py  0003_customuser_alter_hotel_owner.py  0004_room_name.py  0005_booking_hotel.py
bookings/templates/: base.html  home.html
bookings/templates/bookings/: booking_create.html  booking_list.html  customer_create.html  customer_list.html  hotel_create.html  hotel_detail.html  hotel_list.html  pricing_create.html  pricing_list.html  report_create.html  report_list.html  room_create.html  room_list.html
bookings/templates/registration/: login.html  register.html
hotel_management_system/: db.sqlite3  pyproject.toml  settings.py  urls.py
hotel_management_system/bookings/: models.py  permissions.py  serializers.py  urls.py  views.py
hotel_management_system/bookings/migrations/: 0001_initial.py
hotel_management_system/hotel_management_system/: settings.py  urls.py
hotel_management_system/user/: models.py  permissions.py  serializers.py  urls.py  views.py
hotel_management_system/users/: models.py
hotel_management_system/users/migrations/: 0002_alter_customuser_role.py  (+1 more)
static/css/: booking_list.css  customer_create.css  customer_list.css  home.css  hotel_create.css  hotel_list.css  login.css  pricing_create.css  pricing_list.css  register.css  report_create.css  report_list.css  room_create.css  room_list.css  styles.css
staticfiles/css/: booking_create.css  styles.css
